# vaskitsa

./: .editorconfig  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/code/: index.rst
docs/code/vaskitsa/: configuration.rst  exceptions.rst  index.rst  tree.rst
docs/code/vaskitsa/django/: app.rst  configuration.rst  file.rst  index.rst  model.rst  project.rst  renderer.rst
docs/code/vaskitsa/documentation/: base.rst  configuration.rst  file.rst  index.rst  loader.rst  module.rst  repository.rst
docs/code/vaskitsa/documentation/renderers/: index.rst  sphinx.rst
docs/code/vaskitsa/documentation/sphinx/: configuration.rst  file.rst  index.rst  module.rst  repository.rst
docs/code/vaskitsa/git/: changeset.rst  commit.rst  config.rst  index.rst  repository.rst  utils.rst
docs/code/vaskitsa/hooks/: configuration.rst  hook.rst  index.rst  runner.rst
docs/code/vaskitsa/hooks/python/: flake8.rst  index.rst  pylint.rst
docs/code/vaskitsa/python/: constants.rst  file.rst  index.rst  module.rst  package.rst  repository.rst  requirements.rst  setup.rst  utils.rst  version.rst
docs/code/vaskitsa/python/classifiers/: base.rst  development_status.rst  index.rst  lookup.rst
docs/code/vaskitsa/python/requirements/: index.rst  loader.rst  requirement.rst
docs/code/vaskitsa/templates/: index.rst  template.rst
docs/code/vaskitsa/vscode/: base.rst  folders.rst  index.rst  settings.rst  workspace.rst
requirements/: developer.txt  test.txt
tests/: constants.py  test_file.py  test_module.py  test_template_errors.py  test_version.py
tests/cli/: __init__.py  test_cli_documentation_generate.py  test_cli_documentation_list.py  test_cli_init.py
tests/documentation/: conftest.py  constants.py  test_base.py  test_generator_base_exceptions.py  test_processor_invalid_type.py  test_repository_load.py  test_repository_sphinx_generate.py  test_repository_sphinx_load.py  validate.py
tests/documentation/testdata/sphinx_templates/: automodule.rst.j2  module.rst.j2  repository.rst.j2
tests/git/: test_repository.py
tests/mock/mock-python-module/: pyproject.toml
tests/mock/mock-python-module/mock_python_module/: __init__.py
tests/mock/mock-python-module/mock_python_module/demo/: __init__.py  run.py
tests/mock/mock-python-module/unittests/: __init__.py  conftest.py
tests/python/: __init__.py  test_dependencies.py  test_package.py  test_venv.py
vaskitsa/: __init__.py  configuration.py  exceptions.py  tree.py
vaskitsa/django/: __init__.py  app.py  configuration.py  file.py  model.py  project.py  renderer.py
vaskitsa/documentation/: __init__.py  base.py  configuration.py  file.py  loader.py  module.py  package.py  repository.py
vaskitsa/documentation/renderers/: __init__.py  sphinx.py
vaskitsa/documentation/sphinx/: __init__.py  configuration.py  file.py  module.py  package.py  repository.py
vaskitsa/git/: __init__.py  changeset.py  commit.py  config.py  repository.py  utils.py
vaskitsa/hooks/: __init__.py  configuration.py  hook.py  runner.py
vaskitsa/hooks/python/: __init__.py  flake8.py  pylint.py
vaskitsa/python/: __init__.py  constants.py  dependencies.py  file.py  module.py  package.py  repository.py  requirements.py  setup.py  utils.py  venv.py  version.py  virtualenv.py
vaskitsa/python/classifiers/: __init__.py  base.py  development_status.py  lookup.py
vaskitsa/python/requirements/: __init__.py  loader.py  requirement.py
vaskitsa/templates/: __init__.py  template.py
vaskitsa/templates/django/app/: __init__.py.j2  apps.py.j2  urls.py.j2
vaskitsa/templates/django/app/admin/: __init__.py.j2
vaskitsa/templates/django/app/filters/: __init__.py.j2
vaskitsa/templates/django/app/migrations/: __init__.py.j2
vaskitsa/templates/django/app/models/: __init__.py.j2
vaskitsa/templates/django/app/serializers/: __init__.py.j2
vaskitsa/templates/django/app/tests/: __init__.py.j2
vaskitsa/templates/django/app/views/: __init__.py.j2
vaskitsa/templates/django/project/: Makefile.j2  manage.py.j2
vaskitsa/templates/python/: Makefile.j2  README.md.j2  gitignore.j2  gitlab-ci.yml.j2  setup.cfg.j2  setup.py.j2
vaskitsa/templates/sphinx/: repository_index.rst.j2
vaskitsa/vscode/: __init__.py  base.py  folders.py  settings.py  workspace.py
(+22 files in other folders)
