[tool.poetry]
name = "vaskitsa"
version = "2.2.1"
description = "Source code management and documentation maintenance tools"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
license = "PSF"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Python Software Foundation License',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3',
    'Topic :: System',
]

[tool.poetry.scripts]
vaskitsa = "vaskitsa.bin.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pathlib-tree = "^2"
Jinja2 = "^3.0"
requests = "^2"
packaging = "^21"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
flake8 = "^4.0"
flake8-bugbear = "^21.9"
flake8-quotes = "^3.3"
pycodestyle = "^2.8"
pyflakes = "^2.4"
pylint = "^2.11"
pytest = "^6.2"
tox = "^3"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
