[tool.poetry]
name = "vaskitsa"
version = "2.2.2"
description = "Source code management and documentation maintenance tools"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
readme = "README.md"
include = [
    "LICENSE",
]
license = "BSD"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
pathlib-tree = "^2"
Jinja2 = "^3"
requests = "^2"
packaging = "^21"
toml = "^0.10"

[tool.poetry.group.dev.dependencies]
coverage = "^7"
flake8 = "^6"
flake8-bugbear = "^22"
flake8-quotes = "^3"
pycodestyle = "^2"
pyflakes = "^3"
pylint = "^2"
pytest = "^7"
tox = "^4"
ruff = "^0.0.261"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
